[tool.poetry]
name = "cookbook-plain"
version = "0.1.0"
description = ""
authors = ["Stuart Leitch <toruitas@gmail.com>"]
readme = "README.md"
packages = [{include = "cookbook_plain"}]

[tool.poetry.dependencies]
python = "^3.10"
graphene = "^3"
graphene-django = "^3"
django = "^3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
